Upload file feature, eslint setup and linted code
